connect/tests/macros/quint_run/fail/invalid_str.stderr
error: expected string literal
  --> tests/macros/quint_run/fail/invalid_str.rs:11:39
   |
11 | #[quint_run(spec = "spec.qnt", main = 666)]
   |                                       ^^^
